# LUNA-device-detector

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/reference/: LUNAdevice_testResults.xlsx
doc/: IMPLEMENTATION_PLAN.md  LUNA_Algorithm_Testbench_Software_Design.md  LUNA_Wetness_Leakage_Algorithm_Testbench_SRD.md
luna_tb/: __init__.py  config.py  logging_setup.py
luna_tb/cli/: main.py
luna_tb/domain/: models.py
luna_tb/services/: ingest.py  label_import.py  registry_import.py
luna_tb/storage/: db.py  repositories.py
luna_tb/storage/migrations/: 0001_init.sql  0002_run_registry.sql
notebooks/: run_data_overview.ipynb
test-results/: pytest-20260209-203620.html  pytest-20260209-203639.html  pytest-20260209-203639.xml  pytest-20260209-203718.html  pytest-20260209-203718.xml  pytest-20260209-210611.html  pytest-20260209-210611.xml  pytest.html  pytest.xml
tests/: conftest.py
tests/data/: labels_basic.csv  log_basic.csv  run_registry_basic.csv
tests/ingest/: test_ingest.py
tests/labels/: test_label_import.py
tests/registry/: test_registry_import.py
